[package]
name = "ovhlogs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["blocking"] }
